@@ -1,10 +1,12 @@
 package com.wealdy.saemsembackend.domain.category.service;
 
+import static com.wealdy.saemsembackend.domain.core.response.ResponseCode.NOT_FOUND_CATEGORY;
+
 import com.wealdy.saemsembackend.domain.category.entity.Category;
 import com.wealdy.saemsembackend.domain.category.repository.CategoryRepository;
 import com.wealdy.saemsembackend.domain.category.service.dto.GetCategoryDto;
+import com.wealdy.saemsembackend.domain.core.exception.NotFoundException;
 import java.util.List;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -19,16 +21,17 @@ public class CategoryService {
     /**
      * 카테고리 전체 목록 조회
      */
-    public List<GetCategoryDto> getCategories() {
+    public List<GetCategoryDto> getCategoryList() {
         return categoryRepository.findAll().stream()
             .map(GetCategoryDto::from)
-            .collect(Collectors.toList());
+            .toList();
     }
 
     /**
      * 카테고리 단일 조회 with name
      */
-    public Category findByName(String name) {
-        return categoryRepository.findByName(name);
+    public Category getCategory(String name) {
+        return categoryRepository.findByName(name)
+            .orElseThrow(() -> new NotFoundException(NOT_FOUND_CATEGORY));
     }
 }
